syntax = "proto3";

package store;

option go_package = "github.com/vaibhavhapani/Distributed-In-Memory-Key-Value-Store/api/store";

service KeyValueStore {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Put(PutRequest) returns (PutResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

enum StatusType {
    OK = 0;
    CACHE_MISS = 2;
    ERROR = 3;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    StatusType status = 1; 
    string value = 2;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    StatusType status = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    StatusType status = 1;
}